--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,343 @@
-.App {
+/* Sidebar */
+body {
+  overflow: hidden;
+}
+button {
+  cursor: pointer;
+}
+
+/* Home */
+.home {
+  color: aliceblue;
+  margin-left: 22vw;
+  padding: 2%;
+}
+.home__header {
+  max-width: 200px;
+}
+
+.home__table {
+  height: 22vh;
+  overflow: scroll;
+  margin-top: 20px;
+  padding-right: 5vw;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+::-webkit-scrollbar {
+  display: none;
+}
+.home__buttons {
+  float: right;
+  display: flex;
+  margin: 30px 5vw;
+  width: fit-content;
+  height: 5vh;
+}
+.home__buttons button {
+  padding: 0px 10px;
+  background: rgb(5, 153, 5);
+  color: white;
+  border-radius: 5px;
+}
+.home__buttons button:nth-child(2) {
+  background: rgb(211, 138, 3);
+  margin-left: 1vw;
+}
+
+@keyframes Towards {
+  from {
+    left: 0px;
+  }
+  to {
+    left: 100%;
+  }
+}
+@keyframes Downwards {
+  from {
+    top: 0vw;
+  }
+  to {
+    top: 100%;
+  }
+}
+@keyframes Upwards {
+  from {
+    bottom: 0px;
+  }
+  to {
+    bottom: 100%;
+  }
+}
+
+@keyframes Backward {
+  from {
+    right: 0vw;
+  }
+  to {
+    right: 100%;
+  }
+}
+
+.graph {
+  background: #060606;
+  margin-top: 7vh;
+  width: 69vw;
+  height: 45vh;
+  border: 1px solid rgb(49, 199, 226);
+  overflow-y: hidden;
+  overflow-x: hidden;
+  background-image: conic-gradient(
+    at calc(100% - 1px) calc(100% - 1px),
+    rgb(76, 186, 186) 270deg,
+    #0000 0
+  );
+  background-size: 50px 50px;
+}
+.moving__vehicles {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  text-align: center;
+  background: #250fcc;
+  position: relative;
+  margin-bottom: 10px;
+  overflow: hidden;
+}
+
+/* SideBar */
+
+.sidebar {
+  position: fixed;
+  left: 0;
+  background-color: rgb(145, 157, 159);
+  width: 20vw;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  overflow: hidden;
+  position: absolute;
+  padding-top: 100px;
+  font-weight: bold;
+}
+.sidebar__tab {
+  background: inherit;
+  display: grid;
+  margin: 2%;
+}
+.sidebar a {
+  padding: 10px;
+  text-decoration: none;
+  color: black;
+}
+.sidebar__tab a:hover {
+  background: rgb(200, 198, 198);
+  color: blue;
+}
+
+/*AddScenario  And Vehicle*/
+.add__scenario {
+  color: rgb(247, 248, 249);
+  margin-left: 20vw;
+  padding-left: 8vw;
+}
+.add__scenario h2 {
+  padding-top: 100px;
+}
+.addScenario__data {
+  display: flex;
+}
+.Card {
+  background: #3b4444;
+  padding: 7%;
+  margin-right: 15%;
+  margin-top: 20px;
+}
+form input,
+select {
+  width: 80%;
+  padding: 11px 20px;
+  margin: 8px 0;
+  border: 1px solid #8a9fa1;
+  border-radius: 7px;
+  color: rgb(229, 218, 218);
+  background: #000;
+}
+select {
+  width: 90%;
+}
+.addScenario__btn {
+  display: flex;
+  margin: 30px 0px;
+  width: fit-content;
+  height: 5vh;
+}
+.addScenario__btn button {
+  padding: 0px 20px;
+  background: rgb(12, 152, 12);
+  color: white;
+  border-radius: 5px;
+}
+.addScenario__btn button:nth-child(2) {
+  margin-left: 10px;
+  padding: 0px 15px;
+  background-color: orange !important;
+}
+.addScenario__btn button:nth-child(3) {
+  margin-left: 10px;
+  padding: 0px 15px;
+  background-color: rgb(75, 154, 182) !important;
+}
+
+/* Vehicle */
+.add__vehicle {
+  color: rgb(247, 248, 249);
+  margin-left: 20vw;
+  padding-left: 8vw;
+  padding-top: 10%;
+}
+.card {
+  display: flex;
+  width: 50vw;
+}
+.card input,
+select {
+  width: 15vw;
+  margin-right: 18px;
+}
+
+/* All Scenario */
+.all__scenario {
+  color: rgb(240, 243, 246);
+  margin-left: 20vw;
+  padding-left: 8vw;
+  padding-top: 100px;
+}
+.allScenario__head {
+  display: flex;
+  margin: 30px 0px;
+  height: 5vh;
+}
+.h2 {
+  padding-right: 30vw;
+}
+.allScenario__btn {
+  color: white;
+}
+.allScenario__btn button {
+  padding: 10px 0.5vw;
+  background: rgb(41, 190, 224);
+  color: white;
+  border-radius: 5px;
+  margin-right: 1vw;
+}
+.allScenario__btn button:nth-child(2) {
+  background: rgb(12, 152, 12);
+}
+.allScenario__btn button:nth-child(3) {
+  background: orange;
+  padding-right: 5px;
+}
+.allScenario__table {
+  height: 50vh;
+  overflow: scroll;
+  margin-top: 10vh;
+  padding-right: 5vw;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+::-webkit-scrollbar {
+  display: none;
+}
+
+table {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  table-layout: fixed;
+}
+table:hover {
+  cursor: all-scroll;
+}
+table tr {
+  background-color: #f8f8f8;
+  padding: 0.35em;
+  color: #000;
+}
+table th {
+  font-size: 0.85em;
+  letter-spacing: 0.1em;
+  background: #343333;
+  color: #f6f2f2;
+  position: sticky;
+  top: 0;
+}
+table th,
+table td {
+  padding: 0.625em;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+/* Responsive */
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media screen and (max-width: 500px) {
+  .addScenario__data {
+    display: grid;
+  }
+  .card {
+    display: grid;
+  }
+  .card input,
+  select {
+    width: 50vw;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media screen and (max-width: 700px) {
+  .allScenario__head {
+    display: grid;
+    margin-left: 0%;
   }
-  to {
-    transform: rotate(360deg);
+
+  .allScenario__table {
+    height: 60vh;
+  }
+
+  table {
+    padding-top: 5%;
+    border: 0;
+  }
+  table thead {
+    border: none;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+  }
+  table tr {
+    border-bottom: 3px solid #ddd;
+    display: block;
+    margin-bottom: 0.625em;
+  }
+  table td {
+    border-bottom: 1px solid #ddd;
+    display: block;
+    font-size: 0.8em;
+    text-align: right;
+  }
+
+  table td::before {
+    content: attr(data-label);
+    float: left;
+    font-weight: bold;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .h2 {
+    padding-right: 10vw;
   }
 }
